# jira-tools

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Readme.md  flake.nix  package.nix  rust-toolchain.toml  shell.nix
.direnv/: flake-profile-1-link
.github/workflows/: build_nix.yml  dependabot_automerge.yml
src/: main.rs
