[package]
name = "jira-tools"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
env_logger = "0.10"
headers-core = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
xdg = "2"

[dependencies.goji]
git = "https://github.com/softprops/goji.git"
rev = "5916526332951a144b6f6fd7c94d02ea56fdad31"

[dependencies.reqwest]
version = "0.11"
features = ["json"]
