[package]
name = "jira-tools"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14"
env_logger = "0.11"
gouqi = "*"
headers-core = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
xdg = "2"


[dependencies.reqwest]
version = "0.11"
features = ["json"]
