cargo-features = ["edition2024"]

[package]
name = "jira-tools"
version = "0.3.0"
edition = "2024"

[dependencies]
config = "0.15"
env_logger = "0.11"
futures = "0.3"
headers-core = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
xdg = "3"

[dependencies.gouqi]
version = "0.15"
features = ["async"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]
